# fe3c

./: .gitignore  Doxyfile  LICENSE  README.md  configure.ac
esp32/cementite/: CMakeLists.txt  Kconfig
esp32/cementite/test/: CMakeLists.txt
esp32/components/cementite/: CMakeLists.txt  Kconfig
esp32/components/cementite/include/field_elements/: port_overrides.h
esp32/components/cementite/port/field_elements/: field_elements_ed25519_32.c  field_elements_ed448_32.c  overrides.h
esp32/components/cementite/port/hash_functions/: hash_function_sha512.c  hash_function_sha512_esp32.h  hash_function_sha512_impl_hw.c  hash_function_sha512_impl_sw.c
esp32/components/cementite/port/points/: points_ed25519.c  points_ed448.c  points_ed448_isogeny.c
esp32/components/cementite/port/points/comb/: comb_parallel.c  comb_parallel.h  comb_parallel_ed25519.c  comb_parallel_ed25519.h  comb_parallel_ed448.c  comb_parallel_ed448.h
esp32/components/cementite/port/points/comb/precomputation/: precomputation_ed25519_32.c  precomputation_ed25519_small_32.c  precomputation_ed448_32.c  precomputation_ed448_isogeny_32.c  (+2 more)
esp32/components/cementite/port/scalars/: scalars_ed25519_32.c  scalars_ed448_32.c
esp32/components/cementite/port/xtensa/field_elements/: field_elements_ed25519_32.c  field_elements_ed448_32.c
esp32/components/cementite/port/xtensa/hash_functions/: hash_function_sha512.c  hash_function_sha512_esp32.h  hash_function_sha512_impl_hw.c
esp32/components/cementite/port/xtensa/points/: parallel.c  parallel.h  points_ed25519.c  points_ed448.c
esp32/components/cementite/port/xtensa/scalars/: scalars_ed25519_32.c  scalars_ed448_32.c
esp32/components/cementite/test/: CMakeLists.txt
esp32/components/cementite/test/port/field_elements/: Test_field_elements_ed448_32.cpp
src/: Makefile.am  global_defs.h
src/curves/: curve_ed25519.c  curve_ed448.c  curves.c  curves.h
src/eddsa/: eddsa.c
src/field_elements/: field_elements.h  field_elements_ed25519.h  field_elements_ed25519_32.c  field_elements_ed25519_32.h  field_elements_ed25519_64.c  field_elements_ed25519_64.h  field_elements_ed448.h  field_elements_ed448_32.c  field_elements_ed448_32.h  field_elements_ed448_64.c  field_elements_ed448_64.h
src/hash_functions/: hash_function_sha512.c  hash_function_sha512.h  hash_function_shake256.c  hash_function_shake256.h  hash_functions.h
src/points/: points.h  points_ed25519.c  points_ed25519_comb_method.h  points_ed448.c  points_ed448_comb_method.h  points_ed448_isogeny.c
src/points/comb/: comb_ed25519.c  comb_ed25519.h  comb_ed25519_small.c  comb_ed448.c  comb_ed448.h  comb_ed448_small.c
src/points/comb/precomputation/: precomputation_ed25519_32.c  precomputation_ed25519_64.c  precomputation_ed25519_small_32.c  precomputation_ed25519_small_64.c  precomputation_ed448_32.c  precomputation_ed448_64.c  precomputation_ed448_isogeny_32.c  precomputation_ed448_isogeny_64.c  precomputation_ed448_isogeny_small_32.c  precomputation_ed448_isogeny_small_64.c  precomputation_ed448_small_32.c  precomputation_ed448_small_64.c
src/points/lattice_basis_reduction/: lattices_ed25519.c  lattices_ed25519.h  lattices_ed448.c  lattices_ed448.h
src/points/precomputation/: precomputation_ed25519_32.h  precomputation_ed25519_64.h  precomputation_ed448_32.h  precomputation_ed448_64.h
src/scalars/: scalars.h  scalars_ed25519_32.c  scalars_ed25519_64.c  scalars_ed448_32.c  scalars_ed448_64.c
src/utils/: utils.c  utils.h
tests/: CMakeLists.txt  README.md  run_tests
tests/benchmarks/: CMakeLists.txt  add_benchmark_test.cmake  framework.c  framework.h  main.c
tests/benchmarks/esp32/: .gitignore  CMakeLists.txt  README.md
tests/benchmarks/esp32/main/: CMakeLists.txt  bench.c  stack.c  stack.h
tests/benchmarks/host/: Makefile  README.md  bench.c
tests/cmake/: utils.cmake
tests/functional/: CMakeLists.txt  add_functional_test.cmake  functional_tests.h  run_tests
tests/functional/eddsa/: CMakeLists.txt  Test_eddsa_cached_public_key_ed25519.cpp  Test_eddsa_cached_public_key_ed448.cpp  Test_eddsa_fail_cases_ed25519.cpp  Test_eddsa_fail_cases_ed448.cpp  Test_eddsa_rfc_vectors_ed25519.cpp  Test_eddsa_rfc_vectors_ed448.cpp  Test_eddsa_taming_ed25519.cpp  Test_eddsa_taming_ed448.cpp  Test_eddsa_taming_the_many_eddsas.cpp
tests/functional/esp32/: CMakeLists.txt  sdkconfig.defaults
tests/functional/esp32/main/: main.c
tests/functional/field_elements/: CMakeLists.txt  Test_field_elements_ed25519_32.cpp  Test_field_elements_ed25519_64.cpp  Test_field_elements_ed448_32.cpp  Test_field_elements_ed448_64.cpp
tests/functional/hash_functions/: CMakeLists.txt  Test_hash_function_sha512.cpp  Test_hash_function_shake256.cpp
tests/functional/host/: CMakeLists.txt  Main.cpp  add_functional_test.cmake
tests/functional/host/eddsa/: CMakeLists.txt
tests/functional/host/field_elements/: CMakeLists.txt
tests/functional/host/hash_functions/: CMakeLists.txt
tests/functional/host/points/: CMakeLists.txt
tests/functional/host/scalars/: CMakeLists.txt
tests/functional/points/: CMakeLists.txt  Test_points_ed25519.cpp  Test_points_ed448.cpp
tests/functional/scalars/: CMakeLists.txt  Test_scalars_ed25519.cpp  Test_scalars_ed25519_64.cpp  Test_scalars_ed448.cpp
tests/functional/src/eddsa/: Test_eddsa_cached_public_key_ed25519.cpp  Test_eddsa_cached_public_key_ed448.cpp  Test_eddsa_fail_cases_ed25519.cpp  Test_eddsa_fail_cases_ed448.cpp  Test_eddsa_rfc_vectors_ed25519.cpp  Test_eddsa_rfc_vectors_ed448.cpp  Test_eddsa_taming_ed25519.cpp  Test_eddsa_taming_ed448.cpp  Test_eddsa_wycheproof_ed25519.cpp  Test_eddsa_wycheproof_ed448.cpp
tests/functional/src/field_elements/: Test_field_elements_ed25519_32.cpp  Test_field_elements_ed25519_64.cpp  Test_field_elements_ed448_32.cpp  Test_field_elements_ed448_64.cpp
tests/functional/src/hash_functions/: Test_hash_function_sha512.cpp  Test_hash_function_shake256.cpp
tests/functional/src/points/: Test_points_ed25519.cpp  Test_points_ed448.cpp  Test_points_ed448_isogeny.cpp
tests/functional/src/scalars/: Test_scalars_ed25519.cpp  Test_scalars_ed448.cpp
(+22 files in other folders)
